# GB

./: .gitignore  LICENSE.md  README.md
ADS/Lesson 1/: task02.c  task03.c  task04.c  task05.c  task07.c  task08.c  task10.c  task11.c  task12.c  task13.c  task14.c
ADS/Lesson 2/: task1.c  task2.c  task3.c
ADS/Lesson 3/: lesson3.c
ADS/Lesson 4/: barier_move.c  hourse_move_task.c  hourse_move_task.h
ADS/Lesson 5/: math_formula_check.c  math_formula_check.h  single_linked_list_copy.c
ADS/Lesson 6/: binary_tree.c  bintree.txt  simple_hash.c
ADS/Lesson 7/: CMakeLists.txt  matrix.txt
ADS/Lesson 7/Inc/: dijkstra_graph.h  queue.h
ADS/Lesson 7/Src/: dijkstra_graph.c  queue.c
ADS/Lesson 8/: lesson8.c  sortings.docx
OOP/Blackjack/: CMakeLists.txt  main.cpp
OOP/Blackjack/Inc/: card.h  deck.h  game.h  generic_player.h  hand.h  house.h  player.h
OOP/Blackjack/Src/: card.cpp  deck.cpp  game.cpp  generic_player.cpp  hand.cpp  house.cpp  player.cpp
OOP/Lesson 1/: task1.cpp  task2.cpp
OOP/Lesson 1/Task 3/: CMakeLists.txt
OOP/Lesson 1/Task 3/inc/: stack.hpp
OOP/Lesson 1/Task 3/src/: main.cpp  stack.cpp
OOP/Lesson 2/: task1.cpp  task2.cpp  task3.cpp
OOP/Lesson 3/: task1  task1.cpp  task2  task2.cpp  task3  task3.cpp
OOP/Lesson 4/: task.cpp  task1.cpp  task2  task2.cpp
OOP/Lesson 5/: task1.cpp  task2-3.cpp
OOP/Lesson 6/: task1  task1-4.cpp  task1.cpp  task2.cpp  task3.cpp
OOP/Lesson 7/: task2-3.cpp
OOP/Lesson 8/: task1.cpp  task2.cpp  task3.cpp
